--- a/samples/BlazorSample/Pages/CustomStyle.razor
+++ b/samples/BlazorSample/Pages/CustomStyle.razor
@@ -26,7 +26,7 @@
         ModalDialog.ShowDialogAsync<ValidationErrorForm>("Delete record?", options);
     }
 
-    async void ShowModal()
+    void ShowModal()
     {
         ModalDialog.ShowDialogAsync<ValidationErrorForm>("Delete record?");
     }
