--- a/samples/BlazorSample/Pages/MessageBox.razor
+++ b/samples/BlazorSample/Pages/MessageBox.razor
@@ -1,6 +1,5 @@
 ﻿@page "/messagebox"
 @inject IModalDialogService ModalDialog
-@layout CustomModalLayout
 
 <h1>Liquid Technologies Modal Dialog Sample MessageBox's</h1>
 
@@ -32,7 +31,7 @@
 
     async void ShowMessageBoxOK()
     {
-        MessageBoxDialogResult result = await ModalDialog.ShowMessageBox("Simple Message Box", "Click OK, the close button or the background to Close", MessageBoxButtons.OK, MessageBoxDefaultButton.Button1);
+        MessageBoxDialogResult result = await ModalDialog.ShowMessageBoxAsync("Simple Message Box", "Click OK, the close button or the background to Close", MessageBoxButtons.OK, MessageBoxDefaultButton.Button1);
 
         LastMessageBoxResult = result.ToString();
         StateHasChanged();
@@ -40,21 +39,21 @@
 
     async void ShowMessageBoxYesNoCancel()
     {
-        MessageBoxDialogResult result = await ModalDialog.ShowMessageBox("Yes/No/Cancel Message Box", "Clicking the close button or the background is equivient to the Cancel button. Setting the default button to Button2 causes the 'No' button to be highlighted.", MessageBoxButtons.YesNoCancel, MessageBoxDefaultButton.Button2);
+        MessageBoxDialogResult result = await ModalDialog.ShowMessageBoxAsync("Yes/No/Cancel Message Box", "Clicking the close button or the background is equivient to the Cancel button. Setting the default button to Button2 causes the 'No' button to be highlighted.", MessageBoxButtons.YesNoCancel, MessageBoxDefaultButton.Button2);
         LastMessageBoxResult = result.ToString();
         StateHasChanged();
     }
 
     async void ShowMessageBoxYesNo()
     {
-        MessageBoxDialogResult result = await ModalDialog.ShowMessageBox("Yes/No Message Box", "Requires the Yes/No button to be pressed, can't be dismissed with the close or clicking in the background", MessageBoxButtons.YesNo, MessageBoxDefaultButton.Button2);
+        MessageBoxDialogResult result = await ModalDialog.ShowMessageBoxAsync("Yes/No Message Box", "Requires the Yes/No button to be pressed, can't be dismissed with the close or clicking in the background", MessageBoxButtons.YesNo, MessageBoxDefaultButton.Button2);
         LastMessageBoxResult = result.ToString();
         StateHasChanged();
     }
 
     async void ShowMessageBoxAbortRetryIgnore()
     {
-        MessageBoxDialogResult result = await ModalDialog.ShowMessageBox("Abort/Retry/Ignore Message Box", "Requires the Abort/Retry/Ignore button to be pressed, can't be dismissed with the close or clicking in the background", MessageBoxButtons.AbortRetryIgnore, MessageBoxDefaultButton.Button3);
+        MessageBoxDialogResult result = await ModalDialog.ShowMessageBoxAsync("Abort/Retry/Ignore Message Box", "Requires the Abort/Retry/Ignore button to be pressed, can't be dismissed with the close or clicking in the background", MessageBoxButtons.AbortRetryIgnore, MessageBoxDefaultButton.Button3);
         LastMessageBoxResult = result.ToString();
         StateHasChanged();
     }
