--- a/samples/ServerSideblazor/Shared/NavMenu.razor
+++ b/samples/ServerSideblazor/Shared/NavMenu.razor
@@ -26,6 +26,10 @@
             <NavLink class="nav-link" href="/messagebox" Match="NavLinkMatch.All">
                 <span class="oi oi-grid-three-up" aria-hidden="true"></span> Message Boxes
             </NavLink>
+            <NavLink class="nav-link" href="/datainputformdemo" Match="NavLinkMatch.All">
+                <span class="oi oi-grid-three-up" aria-hidden="true"></span> Data Input Form
+            </NavLink>
+            
         </li>
     </ul>
 </div>
