--- a/src/LiquidTechnologies.Blazor.ModalDialog/Components/DataInputForm.razor
+++ b/src/LiquidTechnologies.Blazor.ModalDialog/Components/DataInputForm.razor
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
-@using LiquidTechnologies.Blazor.ModalDialog.Services
+@using Blazor.ModalDialog
 
 @using Microsoft.JSInterop
 @inject NavigationManager NavigationManager
