--- a/samples/BlazorSample/_Imports.razor
+++ b/samples/BlazorSample/_Imports.razor
@@ -5,5 +5,4 @@
 @using BlazorSample
 @using BlazorSample.Shared
 
-@using LiquidTechnologies.Blazor.ModalDialog
-@using LiquidTechnologies.Blazor.ModalDialog.Services
+@using Blazor.ModalDialog
