--- a/samples/ServerSideblazor/_Imports.razor
+++ b/samples/ServerSideblazor/_Imports.razor
@@ -8,5 +8,4 @@
 @using ServerSideblazor
 @using ServerSideblazor.Shared
 
-@using LiquidTechnologies.Blazor.ModalDialog
-@using LiquidTechnologies.Blazor.ModalDialog.Services
+@using Blazor.ModalDialog
