Updated Docs to reflect move to using [Parameter] rather than [CascadeParamater] to pass values to the dialogs

--- a/samples/BlazorSample/Pages/SignUpForm.razor
+++ b/samples/BlazorSample/Pages/SignUpForm.razor
@@ -21,17 +21,12 @@
 
 @code {
 
-    [CascadingParameter] ModalDialogParameters Parameters { get; set; }
-
-    bool ShowForm { get; set; } = true;
-    string FirstName { get; set; }
-    string LastName { get; set; }
-    int FormId { get; set; }
-
-    protected override void OnInitialized()
-    {
-        FormId = Parameters.Get<int>("FormId");
-    }
+    [Parameter]
+    public string FirstName { get; set; }
+    [Parameter]
+    public string LastName { get; set; }
+    [Parameter]
+    public int FormId { get; set; }
 
     async void Ok_Clicked()
     {
@@ -55,5 +50,4 @@
     {
         ModalDialogService.Close(false);
     }
-
 }
