--- a/samples/ServerSideblazor/Shared/NavMenu.razor
+++ b/samples/ServerSideblazor/Shared/NavMenu.razor
@@ -29,7 +29,9 @@
             <NavLink class="nav-link" href="/datainputformdemo" Match="NavLinkMatch.All">
                 <span class="oi oi-grid-three-up" aria-hidden="true"></span> Data Input Form
             </NavLink>
-            
+            <NavLink class="nav-link" href="/scrollableform" Match="NavLinkMatch.All">
+                <span class="oi oi-grid-three-up" aria-hidden="true"></span> Scrollable Form
+            </NavLink>
         </li>
     </ul>
 </div>
